repair swagger docs and add middleware authorize
